[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = "Integration tests for DECODE OpenCloud."
authors = ["Arthur Jaques <arthur.jaques@hispeed.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core=1.8.4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docker-build = "scripts.docker:build"
docker-run = "scripts.docker:run"
docker-stop = "scripts.docker:stop"
docker-cleanup = "scripts.docker:cleanup"

[tool.pytest.ini_options]
markers = [
    "aws: requires aws credentials"
]
addopts = "-m 'not aws'"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
strict = true
